Add WeCom callback route config
